--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <head>1234
+  <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="5tong.GitHub.io : ">
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/5tong">View on GitHub</a>
 
-          <h1 id="project_title">5tong.GitHub.io</h1>
+          <h1 id="project_title">5tongSB</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
